[package]
name = "crypto-homework"
version = "0.1.0"
edition = "2021"

[dependencies]
p256 = { version = "0.13", features = ["ecdh", "ecdsa"] }
ed25519-dalek = "2.0"
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"
rand = "0.9.2"
hex = "0.4"

# Post-Quantum Cryptography
pqcrypto-kyber = "0.8"
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"
